Fixed overscrolling rubber band behavior. Fixed awkward jumps in display from the scrollbar appearing after enough events have been added. Made scrollbar invisible in webkit browsers.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -66,10 +66,22 @@ table {
 
 html {
   background-image: url(../img/dust_scratches.png);
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  overscroll-behavior-y: none;
+  -ms-scroll-chaining: none;
+  overflow-x: hidden;
+  width: 100vw; }
+
+body {
+  overscroll-behavior-y: none; }
 
 button {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+  /* make scrollbar transparent */ }
 
 html {
   font-size: 55%;
@@ -610,7 +622,6 @@ body {
     background-image: linear-gradient(to right, #0091CC, #4CCBFF);
     width: 100%;
     height: 10rem;
-    position: fixed;
     z-index: 200; }
   .menu__buttonContainer {
     width: 100%;
@@ -631,7 +642,8 @@ body {
   .menu__mobile {
     position: relative;
     height: 10rem;
-    background-color: #0091CC; }
+    background-color: #0091CC;
+    display: none; }
   .menu__currentDay {
     background-color: #00364c;
     font-size: 4rem;
