--- a/resources/sass/layout/_menu.scss
+++ b/resources/sass/layout/_menu.scss
@@ -17,7 +17,6 @@
     background-image: linear-gradient(to right, $color-primary-medium-2, $color-primary-light);
     width: 100%;
     height: 10rem;
-    position: fixed;
     z-index: 200;
   } 
   
@@ -40,6 +39,7 @@
     position: relative;
     height: 10rem;
     background-color: $color-primary-medium-2;
+    display: none;
   }
   &__currentDay {
     background-color: darken($color-primary-dark-1, 10%);
